<resources>
    <string name="app_name">Quản lý thu chi</string>
    <string name="downloaded">Đã tải xuống</string>
    <string name="setting">Cài đặt</string>
    <string name="home">Trang chủ</string>
    <string name="log_out">Đăng xuất</string>
    <string name="_welcome">Chào mừng 👋</string>
    <string name="register_now_to_experience_the_course">Đăng ký ngay để trải nghiệm khóa học</string>
    <string name="first_and_last_name">Họ và tên</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="enter_the_password">Nhập mật khẩu</string>
    <string name="sign_up">Đăng ký</string>
    <string name="already_have_an_account"><font color="#252525">Bạn đã có tài khoản? </font></string>
    <string name="sign_in_to_experience_the_course">Đăng nhập để trải nghiệm khóa học</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="no_account">Không có tài khoản?</string>
    <string name="_forgot_password_fragment">Quên mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="send">Gửi</string>
    <string name="otp">OTP</string>
    <string name="enter_a_new_password">Nhập mật khẩu mới</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="user_name">Tên người dùng</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="accept">Chấp nhận</string>
    <string name="income">Khoản thu</string>
    <string name="expense">Khoản Chi</string>
    <string name="income_category">Loại thu</string>
    <string name="statistics">Thống kê</string>
    <string name="search_for_my_income">Tìm kiếm thu nhập của tôi</string>
    <string name="cancel">Hủy</string>
    <string name="you_don_t_have_any_income_yet">Bạn chưa có bất kỳ thu nhập nào</string>
    <string name="update">Cập nhật</string>
    <string name="delete">Xóa</string>
    <string name="confirm_delete">Xác nhận xóa?</string>
    <string name="are_you_sure_you_want_to_delete_this_file">Bạn có chắc chắn muốn xóa tệp này không?</string>
    <string name="detail_income">Chi tiết thu nhập</string>
    <string name="paid">Đã thanh toán</string>
    <string name="unpaid">Chưa thanh toán</string>
    <string name="detail_expense">Chi tiết chi phí</string>
    <string name="save">Lưu</string>
    <string name="rename">Đổi tên</string>
    <string name="name_cannot_be_blank">Không được để trống tên</string>
    <string name="expense_category">Loại thu</string>
    <string name="add">Thêm</string>
    <string name="create_income">Tạo thu nhập</string>
    <string name="create_expense">Tạo chi phí</string>
    <string name="create_expense_categories">Tạo danh mục chi phí</string>
    <string name="create_income_categories">Tạo danh mục thu nhập</string>
    <string name="not_received">Chưa nhận được</string>
    <string name="received">Đã nhận</string>
</resources>