<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:src="@drawable/bg_dialog_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:src="@drawable/ic_round_line"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_40sdp"
        app:layout_constraintDimensionRatio="120:152"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/iv_popup_rename"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_16sdp"
        android:paddingHorizontal="@dimen/_40sdp"
        android:paddingVertical="@dimen/_22sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:ellipsize="marquee"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/rename"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/app_name"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:maxLength="70"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_36sdp"
            android:singleLine="true"
            android:textColor="#828282"
            android:textColorHint="#828282"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@+id/tvHeader"
            app:layout_constraintStart_toStartOf="@+id/tvHeader"
            app:layout_constraintTop_toBottomOf="@id/tvHeader" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@id/edInput"
            app:layout_constraintEnd_toEndOf="@id/edInput"
            app:layout_constraintTop_toTopOf="@id/edInput" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/edInput">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_no"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textColor="#828282"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_yes"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>