<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_primary"
    tools:context=".future.activity.MainActivity">
    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_header_main"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/itemHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chào,"
            android:fontFamily="@font/inter_bold"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tvNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fullname"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/lnContainer1"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/itemHeader"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ctnIncome"
            >
            <ImageView
                android:id="@+id/ivIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/iv_income"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:fontFamily="@font/inter_semibold"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                android:gravity="center"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="@id/ivIncome"
                app:layout_constraintEnd_toEndOf="@id/ivIncome"
                app:layout_constraintBottom_toBottomOf="@id/ivIncome"
                app:layout_constraintTop_toTopOf="@id/ivIncome"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ctnExpense"
            >
            <ImageView
                android:id="@+id/ivExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/iv_expense"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:fontFamily="@font/inter_semibold"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                android:gravity="center"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="@id/ivExpense"
                app:layout_constraintEnd_toEndOf="@id/ivExpense"
                app:layout_constraintBottom_toBottomOf="@id/ivExpense"
                app:layout_constraintTop_toTopOf="@id/ivExpense"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lnContainer2"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/lnContainer1"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ctnIncomeCategory"
            >
            <ImageView
                android:id="@+id/ivIncomeCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/iv_income_category"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/income_category"
                android:fontFamily="@font/inter_semibold"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                android:gravity="center"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="@id/ivIncomeCategory"
                app:layout_constraintEnd_toEndOf="@id/ivIncomeCategory"
                app:layout_constraintBottom_toBottomOf="@id/ivIncomeCategory"
                app:layout_constraintTop_toTopOf="@id/ivIncomeCategory"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ctnExpenseCategory"
            >
            <ImageView
                android:id="@+id/ivExpenseCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/iv_expense_category"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/expense_category"
                android:fontFamily="@font/inter_semibold"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                android:gravity="center"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="@id/ivExpenseCategory"
                app:layout_constraintEnd_toEndOf="@id/ivExpenseCategory"
                app:layout_constraintBottom_toBottomOf="@id/ivExpenseCategory"
                app:layout_constraintTop_toTopOf="@id/ivExpenseCategory"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lnContainer3"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/lnContainer2"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ctnStatistics"
            >
            <ImageView
                android:id="@+id/ivStatitic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/iv_statitic"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/statistics"
                android:fontFamily="@font/inter_semibold"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                android:gravity="center"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="@id/ivStatitic"
                app:layout_constraintEnd_toEndOf="@id/ivStatitic"
                app:layout_constraintBottom_toBottomOf="@id/ivStatitic"
                app:layout_constraintTop_toTopOf="@id/ivStatitic"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ctnSetting"
            >
            <ImageView
                android:id="@+id/ivSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/iv_setting"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:fontFamily="@font/inter_semibold"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                android:gravity="center"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="@id/ivSetting"
                app:layout_constraintEnd_toEndOf="@id/ivSetting"
                app:layout_constraintBottom_toBottomOf="@id/ivSetting"
                app:layout_constraintTop_toTopOf="@id/ivSetting"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>